# concurrentes-alglobo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  apache-ab-req.json  apache-ab-stresstest.sh  build.yml  enunciado.md  flights.txt  gen_docs.sh  pandoc_headers.md
.github/workflows/: rust.yml
docs/: .rustc_info.json  index.html
docs/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/doc/actix/: all.html  fn.main.html  fn.reserve.html  index.html  sidebar-items.js  type.AirlineReq.html  type.HotelReq.html
docs/doc/alglobo/: all.html  constant.AIRLINES_FILE.html  constant.QUIT_COMMANDS.html  constant.RATE_LIMITING_DEFAULT.html  constant.STAT_COMMANDS.html  fn.keyboard_listener.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.reservation.html
docs/doc/common/: all.html  index.html  (+5 more)
src/: airline.rs  airline_factory.rs  airlines.rs  alglobo.rs  flight_reservation.rs  hotel.rs  informe.rs  logger.rs  main.rs  statistics.rs  statsactor.rs  utils.rs
src/actix/: airline.rs  airline_manager.rs  airlines.rs  flight.rs  hotel.rs  info_flight.rs  main.rs  stats_actor.rs  statsactor.rs  utils.rs
src/common/: flight_reservation.rs  informe.rs  logger.rs  main.rs  simulate_requests.rs  utils.rs
src/configs/: airlines.txt  test_flights.txt
src/test/: test_flights.txt  test_flights2.txt  test_flights3.txt  test_flights4.txt  test_flights5.txt
src/threads/: airlines.rs  alglobo.rs  flight_reservation.rs  informe.rs  keyboard.rs  logger.rs  main.rs  statistics.rs  test.rs
test/: test.txt
(+172 files in other folders)
