[package]
name = "alglobo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
std-semaphore = "0.1"
actix-web = "3"
serde = "1"
serde_json = "1.0.40"
chrono = "0.4"
actix = "0.11.1"
actix-rt = "2.0"